Minor edits to accelerator-grant-report.Rmd

--- a/accelerator-grant-report/accelerator-grant-report.Rmd
+++ b/accelerator-grant-report/accelerator-grant-report.Rmd
@@ -10,6 +10,8 @@ header-includes:
   - \linespread{1.25}
   - \usepackage{float}
   - \floatplacement{figure}{hbt!}
+link-citations: true
+linkcolor: cyan
 ---
 
 ```{r setup, include=FALSE}
@@ -37,9 +39,9 @@ kable_standard <- function(...) {
 
 #### Summary
 
-This report details a series of complementary visualizations to help public health officials and health system leaders understand the spread of COVID-19 in the state of Wisconsin. The visualizations are available interactively at <https://data-viz.it.wisc.edu/wi-metro-growth-rate/>, <https://data-viz.it.wisc.edu/wi-metro-growth-gundersen/>, and <https://data-viz.it.wisc.edu/wi-metro-growth-marshfield/> with data that updates daily and summaries that update weekly. The project uses data from the New York Times collection of confirmed cases and deaths by county, Wisconsin Department of Health Services COVID-19 historical data by county, the Corona Data Scraper world region time-series dataset, and population counts and metro area definitions from the U.S Census. 
+This report details a series of complementary visualizations to help public health officials and health system leaders understand the spread of COVID-19 in the state of Wisconsin. The visualizations are available interactively at <https://data-viz.it.wisc.edu/wi-metro-growth-rate/>, <https://data-viz.it.wisc.edu/wi-metro-growth-gundersen/>, and <https://data-viz.it.wisc.edu/wi-metro-growth-marshfield/> with data that updates daily. The project uses data from the New York Times collection of confirmed cases and deaths by county, Wisconsin Department of Health Services COVID-19 historical data by county, the Corona Data Scraper world region time-series dataset, and population counts and metro area definitions from the U.S Census. 
 
-First, inspired by work from the New York Times, the project describe two visualizations that plot the growth rate of COVID-19 cases measured as average daily change over the last 7 days. By looking directly at the relative spread of cases, areas with high growth are easily identifiable. In recent data, this has identified the areas of Green Bay, Janesville, Racine, and Appleton as areas of moderately high growth as of 5/4/2020. Among these areas, Green Bay and Janesville are seeing a slow down in the growth rate, whereas Racine and Appleton are increasing their growth slightly. In addition to looking at growth rates over time, measuring them against confirmed cases per capita helps to compare outbreaks that happen at different times. From this visualization, we can see that Green Bay's outbreak appears much worse than the initial outbreak in Madison and Milwaukee on a per capita basis. 
+First, inspired by work from the New York Times, the project describes two visualizations that plot the growth rate of COVID-19 cases measured as average daily change over the last 7 days. By looking directly at the relative spread of cases, areas with high growth are easily identifiable. Back in May, this has identified the areas of Green Bay, Janesville, Racine, and Appleton as areas of moderately high growth as of 5/4/2020. Among these areas, Green Bay and Janesville are seeing a slow down in the growth rate, whereas Racine and Appleton are increasing their growth slightly. In addition to looking at growth rates over time, measuring them against confirmed cases per capita helps to compare outbreaks that happen at different times. From this visualization, we can see that Green Bay's outbreak appears much worse than the initial outbreak in Madison and Milwaukee on a per capita basis. 
 
 Next, New Case Counts
 
@@ -107,7 +109,7 @@ Figure \ref{fig:gr-cases} can be difficult to read at first. The combination of 
 
 For some counties with a small number of cases, growth rates may be somewhat misleading. A county with only 4 cases would have a 50% growth rate if it had 6 cases the next day. In this case, the number of new cases might be more informative. The accompanying chart shows a weekly average of new cases compared to the number of cases for various counties. Figure \ref{fig:new-cases-cases} helps distinguish between places where cases are growing fast with few cases and places where cases are numerous and still growing fast. Works well for counties with only a few cases. Lastly, the plot takes into account both the trajectory of the disease and the burden on the clinics.
 
-Figure \ref{fig:new-cases-cases} is applicable to smaller counties e.g. LaCrosse, Wisconsin and Allamakee, Iowa while also scaling to larger counties e.g. Winona, MN. The interpretation of the plot using new cases by case count is easier to use since an increasing trend implies the number of new cases is greater today than it was yesterday or the virus is growing quickly. Conversely, a decreasing trend implies the number of new cases is lesser today than it was yesterday or the virus is growing quickly. Alternatively, a constant trend implies the number of new cases is the same today as it was yesterday or the virus is spreading at the same rate. Similar to the previous plots, the goal of a given area is to reach an average daily change of 0\% where there are no new cases. 
+Figure \ref{fig:new-cases-cases} is applicable to smaller counties like LaCrosse, Wisconsin and Allamakee, Iowa while also scaling to larger counties like Winona, MN. The interpretation of the plot using new cases by case count is easier to use since an increasing trend implies the number of new cases is greater today than it was yesterday or the virus is growing quickly. Conversely, a decreasing trend implies the number of new cases is lesser today than it was yesterday or the virus is growing quickly. Alternatively, a constant trend implies the number of new cases is the same today as it was yesterday or the virus is spreading at the same rate. Similar to the previous plots, the goal of a given area is to reach an average daily change of 0\% where there are no new cases. 
 
 ```{r new-cases-cases, fig.cap = "\\textit{New cases versus cumulative cases over the last four week for the Gundersen Health System region.}", out.width = "90%"}
 knitr::include_graphics(
@@ -139,7 +141,7 @@ knitr::include_graphics(
 
 After the website went live, we followed-up a second time with the clients and other end-users to customize visualizations and other features to their specific needs. Corey Zarecki, Director of Envision at Gundersen Health System, wanted to see regional information over 21 counties in 3 states in the health system. However, the previous plots did not provide meaningful results for counties with few cases. Hence, counties with less 30 confirmed cases were omitted. According to a New York Times article, density measurements focus on communities where the disease is prevalent. Similar to Figure \ref{fig:gr-time} and \ref{fig:gr-cases}, Figure \ref{fig:new-cases-cases} shows whether a community has succeeded in slowing the rate of growth before there are many cases for new cases instead of growth rate and cases instead of cases per capita. 
 
-Corey Zarecki provided feedback after publishing the website of the modified New York Times graphics for counties containing Gundersen clinics including the charts were easy to use and also shows very clearly the hot-spots confirming other sources. Moreover, he stated the biggest benefit is showing early detection for areas of interest enabling them to anticipate trends a few critical days in advance. Murali Narayana, Executive Director at Marshfield Clinic and EVP Care Delivery and Chief Strategy Officer at Marshfield Clinic Health System, similarly provided comments after publishing the website of the modified New York Times graphics for counties containing Marshfield clinics including the charts were able track the daily growth rate and doubling time as well as providing a better understanding of the trend on a daily basis using a time window to meet their needs in their service area. Additionally, Gundersen Health and Marshfield Clinic in addition to the Wisconsin Department of Health Services currently use the instantaneous R~0~ visualization to anticipate trends and alert health professionals a few critical days in advance.
+Corey Zarecki provided feedback after publishing the website of the modified New York Times graphics for counties containing Gundersen clinics including the charts were easy to use and also shows very clearly the hot-spots confirming other sources. Moreover, he stated the biggest benefit is showing early detection for areas of interest enabling them to anticipate trends a few critical days in advance. Murali Narayana, Executive Director at Marshfield Clinic and EVP Care Delivery and Chief Strategy Officer at Marshfield Clinic Health System, similarly provided comments after publishing the website of the modified New York Times graphics for counties containing Marshfield clinics including the charts were able track the daily growth rate and doubling time as well as providing a better understanding of the trend on a daily basis using a time window to meet their needs in their service area. Gundersen Health and Marshfield Clinic, in addition to the Wisconsin Department of Health Services, currently use the instantaneous R~0~ visualization to anticipate trends and alert health professionals a few critical days in advance.
 
 #### Maintenance 
 
